@@ -288,11 +288,9 @@ class CScreenBuilder {
 		}
 
 		// create screen table
-		$screenTable = new CTable(
-			new CLink(
-				_('No rows in screen.').SPACE.$this->screen['name'],
-				'screenconf.php?config=0&form=update&screenid='.$this->screen['screenid']),
-				($this->mode == SCREEN_MODE_PREVIEW || $this->mode == SCREEN_MODE_SLIDESHOW) ? 'screen_view' : 'screen_edit'
+		$screenTable = new CTable();
+		$screenTable->setAttribute('class',
+			in_array($this->mode, array(SCREEN_MODE_PREVIEW, SCREEN_MODE_SLIDESHOW)) ? 'screen_view' : 'screen_edit'
 		);
 		$screenTable->setAttribute('id', 'iframe');
 
